--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node":"20.11.0"
+    "node": "20.11.0"
   },
   "name": "project",
   "version": "1.0.0",
@@ -26,6 +26,7 @@
     "express-session": "^1.18.0",
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
